add pixel perfect of catalog section

--- a/src/index.html
+++ b/src/index.html
@@ -1819,6 +1819,91 @@
         </div>
       </div>
     </section>
+    <!-- <section class="event">
+      <div class="container container-event">
+        <h2 class="title">События</h2>
+        <ul class="event-list">
+          <li class="event-card">
+            <img src="./img/event1.jpg" alt="event1" class="event-card__img">
+            <div class="event-card-wrapper">
+              <small class="event-card__note">Музей им. Щусева <br> с 20 марта по 30 апреля</small>
+              <h4 class="subtitle">Книжная гравюра в живом восприятии</h4>
+              <p class="text">Один из ведущих флорентийских художников Кватроченто, основатель художественной династии,
+                которую продолжили его брат Давид и сын Ридольфо. Глава художественной мастерской, где юный
+                Микеланджело.
+              </p>
+              <a href="#" class="event-card__link">Подродбнее</a>
+            </div>
+          </li>
+          <li class="event-card">
+            <img src="./img/event2.jpg" alt="event2" class="event-card__img">
+            <div class="event-card-wrapper">
+              <small class="event-card__note">ММОМА <br>24 марта 19:00</small>
+              <h4 class="subtitle">«Открытая дискуссия». Дмитрий Петров и Сергей Ильин.</h4>
+              <p class="text">Высокий уровень вовлечения представителей целевой аудитории является четким
+                доказательством
+                простого факта: постоянный количественный рост и сфера нашей активности представляет собой интересный
+                эксперимент проверки новых принципов формирования...
+              </p>
+              <a href="#" class="event-card__link">Подробнее</a>
+            </div>
+          </li>
+          <li class="event-card">
+            <img src="./img/event3.jpg" alt="event3" class="event-card__img">
+            <div class="event-card-wrapper">
+              <small class="event-card__note">Еврейский музей<br> с 31 марта по 21 апреля</small>
+              <h4 class="subtitle">Выставка «Формация 2020»</h4>
+              <p class="text">Идейные соображения высшего порядка, а также современная методология разработки играет
+                важную роль в формировании глубокомысленных рассуждений. Также как перспективное планирование играет
+                определяющее значение для новых принципов формирования материально-технической и кадровой базы.
+              </p>
+              <a href="#" class="event-card__link">Подродбнее</a>
+            </div>
+          </li>
+          <li class="event-card" data-event="hide">
+            <img src="./img/event4.jpg" alt="event4" class="event-card__img">
+            <div class="event-card-wrapper">
+              <small class="event-card__note">Третьяковка на Крымском валу<br>
+                с 30 марта по 30 апреля</small>
+              <h4 class="subtitle">XXIV Международная биеннале молодого искусства</h4>
+              <p class="text">Внезапно, реплицированные с зарубежных источников, современные исследования представляют
+                собой не что иное, как квинтэссенцию победы маркетинга над разумом и должны быть рассмотрены
+                исключительно
+                в разрезе маркетинговых и финансовых...
+              </p>
+              <a href="#" class="event-card__link">Подродбнее</a>
+            </div>
+          </li>
+          <li class="event-card" data-event="hide">
+            <img src="./img/event5.jpg" alt="event5" class="event-card__img">
+            <div class="event-card-wrapper">
+              <small class="event-card__note">ММАМ<br>
+                с 8 апреля по 20 мая</small>
+              <h4 class="subtitle">Джон Винзор. Фотографии из серии «Метафора серебра»</h4>
+              <p class="text">Один из ведущих флорентийских художников Кватроченто, основатель художественной династии,
+                которую продолжили его брат Давид и сын Ридольфо. Глава художественной мастерской, где юный
+                Микеланджело.
+              </p>
+              <a href="#" class="event-card__link">Подродбнее</a>
+            </div>
+          </li>
+          <li class="event-card" data-event="hide">
+            <img src="./img/event3.jpg" alt="event6" class="event-card__img">
+            <div class="event-card-wrapper">
+              <small class="event-card__note">ММАМ<br>
+                с 8 апреля по 20 мая</small>
+              <h4 class="subtitle">Джон Винзор. Фотографии из серии «Метафора серебра»</h4>
+              <p class="text">Один из ведущих флорентийских художников Кватроченто, основатель художественной династии,
+                которую продолжили его брат Давид и сын Ридольфо. Глава художественной мастерской, где юный
+                Микеланджело.
+              </p>
+              <a href="#" class="event-card__link">Подродбнее</a>
+            </div>
+          </li>
+        </ul>
+        <button class="event__button">Все события</button>
+      </div>
+    </section> -->
 
 
 
